Prevent page jumping when using jetpack carousel

--- a/less/gallery.less
+++ b/less/gallery.less
@@ -1,5 +1,9 @@
 // WordPress galleries
 
+.carousel-open {
+	height: auto;
+}
+
 .gallery {
 	display: -webkit-flex;
 	display: flex;
